# pretix-ticket-transfer

./: .gitignore  .update-locales.sh  DIRECT_TRANSFER_FLOW.md  INTERMEDIATED_TRANSFER_FLOW.md  LICENSE  MANIFEST.in  Makefile  README.rst  TICKET_TRANSFER_FLOW.md  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_ticket_transfer/: __init__.py  apps.py  signals.py  urls.py  user_split.py  utils.py  views.py
pretix_ticket_transfer/locale/: django.pot
pretix_ticket_transfer/locale/de_Informal/LC_MESSAGES/: django.po
pretix_ticket_transfer/templates/pretix_ticket_transfer/: order_info.html  order_info_accept.html  order_info_done.html  settings.html  transfer.html
pretix_ticket_transfer/templates/pretix_ticket_transfer/control/: stats.html
